<resources>
    <string name="app_name">QuizITApp</string>
    <string name="addNewUser">If you are not registered\nClick Here...</string>
    <string name="userNameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="userText">User</string>
    <string name="adminText">Admin</string>
    <string name="loginText">Login</string>
    <string name="SignUpText">Sign Up</string>
    <string name="mobileText">Mobile</string>
    <string name="branchText">Branch</string>
    <string name="Instructions">1. Select a language.\n2. You will be provided 5 questions of a language</string>
    <string name="cText">C</string>
    <string name="cppText">C++</string>
    <string name="javaText">Java</string>
    <string name="pythonText">Python</string>
    <string name="startText">Start</string>
    <string name="noneText">None</string>
    <string name="submitText">Submit</string>
    <string name="skipText">Skip</string>
    <string name="resultText">Result</string>
    <string name="langText">Language</string>
    <string name="correctText">Correct</string>
    <string name="wrongText">Wrong</string>
    <string name="perText">Percentage</string>
    <string name="thanksText">Thanks... Keep Playing</string>>
    <string-array name="cQues">
        <item>Which of these is incorrect variable name in C?</item>
        <item>Let i=5\nWhat is i++ * ++i?</item>
        <item>Which of these is not data type in C?</item>
        <item>Which of the format specifier is used to print float values in C?</item>
        <item>If two strings are equal the strcmp() returns </item>
    </string-array>
    <string-array name="cOpt">
        <item>var1</item>
        <item>VaR1</item>
        <item>1Var</item>
        <item>var_1</item>
        <item>42</item>
        <item>36</item>
        <item>30</item>
        <item>35</item>
        <item>int</item>
        <item>char</item>
        <item>bool</item>
        <item>float</item>
        <item>%F</item>
        <item>%lf</item>
        <item>%d</item>
        <item>%f</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>Yes</item>
    </string-array>
    <string-array name="cRes">
        <item>1Var</item>
        <item>42</item>
        <item>bool</item>
        <item>%f</item>
        <item>0</item>
    </string-array>

    <string-array name="cppQues">
        <item>Which of the following type of class allows only one object of it to be created?</item>
        <item>Which of the following is not a member of class?</item>
        <item>How many instances of abstract class can be created?</item>
        <item>Which of the following can not be friend?</item>
        <item>cout is an </item>
    </string-array>
    <string-array name="cppOpt">
        <item>Virtual class</item>
        <item>Abstract class</item>
        <item>Singleton class</item>
        <item>Friend class</item>
        <item>Static function</item>
        <item>Friend function</item>
        <item>Const function</item>
        <item>Virtual function</item>
        <item>1</item>
        <item>5</item>
        <item>As many you want</item>
        <item>0</item>
        <item>Function</item>
        <item>Class</item>
        <item>Object</item>
        <item>Operator function</item>
        <item>operator</item>
        <item>function</item>
        <item>object</item>
        <item>macro</item>
    </string-array>
    <string-array name="cppRes">
        <item>Singleton class</item>
        <item>Friend function</item>
        <item>0</item>
        <item>Object</item>
        <item>object</item>
    </string-array>

    <string-array name="javaQues">
        <item>What is the name of the method used to start a thread execution?</item>
        <item>Which is true about a method-local inner class?</item>
        <item>Which is a valid keyword in Java?</item>
        <item>Which one is a valid declaration of boolean?</item>
        <item>What is the numerical range of char?</item>
    </string-array>
    <string-array name="javaOpt">
        <item>init();</item>
        <item>start();</item>
        <item>run();</item>
        <item>resume();</item>
        <item>Item must be marked final.</item>
        <item>It can be marked abstract.</item>
        <item>It can be marked public.</item>
        <item>It can be marked static.</item>
        <item>interface</item>
        <item>string</item>
        <item>Float</item>
        <item>unsigned</item>
        <item>boolean b = 0;</item>
        <item>boolean b = 'false';</item>
        <item>boolean b = false;</item>
        <item>boolean b = no;</item>
        <item>-128 to 127</item>
        <item>-(2^15) to (2^15) - 1</item>
        <item>0 to 32767</item>
        <item>0 to 65535</item>
    </string-array>
    <string-array name="javaRes">
        <item>start();</item>
        <item>It can be marked abstract.</item>
        <item>interface</item>
        <item>boolean b = false;</item>
        <item>0 to 65535</item>
    </string-array>

    <string-array name="pythonQues">
        <item>Which of these is not a core data type?</item>
        <item>Which of the following function convert a string to a float in python?</item>
        <item>What is the output of the expression : 3*1**3</item>
        <item>What is the output of the following segment :chr(ord('A'))</item>
        <item>What is the output of 9//2</item>
    </string-array>

    <string-array name="pythonOpt">
        <item>Lists</item>
        <item>Dictionary</item>
        <item>Tuples</item>
        <item>Class</item>
        <item>int(x [,base])</item>
        <item>long(x,[base]</item>
        <item>float(x)</item>
        <item>str(x)</item>
        <item>27</item>
        <item>9</item>
        <item>3</item>
        <item>1</item>
        <item>A</item>
        <item>B</item>
        <item>a</item>
        <item>Error</item>
        <item>4.5</item>
        <item>4.0</item>
        <item>4</item>
        <item>Error</item>
    </string-array>

    <string-array name="pythonRes">
        <item>Class</item>
        <item>float(x)</item>
        <item>3</item>
        <item>A</item>
        <item>4</item>
    </string-array>


    <string name="action_settings">Settings</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
</resources>
