<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/name"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Instructions"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:text="@string/Instructions"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/lang"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp">

        <RadioButton
            android:id="@+id/cRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/cText"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/cppRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/cppText"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/javaRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lang"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/javaText"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/pythonRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/pythonText"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/startText" />

</RelativeLayout>
