<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A120DD"
    tools:context=".Result">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/resultText"
        android:fontFamily="casual"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="45dp"
        android:layout_toStartOf="@+id/textView2"
        android:text="@string/langText"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_toEndOf="@+id/textView2"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="44dp"
        android:text="@string/userNameText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/language"
        android:layout_alignTop="@+id/textView5"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="46dp"
        android:text="@string/correctText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/name"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="39dp"
        android:text="@string/wrongText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/correct"
        android:layout_alignTop="@+id/textView9"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_below="@+id/wrong"
        android:layout_marginTop="33dp"
        android:text="@string/perText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="casual"
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/wrong"
        android:layout_alignTop="@+id/textView11"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/keepPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:fontFamily="casual"
        android:text="@string/thanksText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/keepPlaying"
        android:layout_toStartOf="@+id/textView2"
        android:text="Restart" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/keepPlaying"
        android:layout_alignEnd="@+id/language"
        android:text="Exit" />
</RelativeLayout>
