<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".LoginPage"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_weight="4.2"
        android:background="#43abd9"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/black"></android.support.v7.widget.Toolbar>


        <ImageView
            android:id="@+id/icon"
            android:layout_width="280dp"
            android:layout_height="140dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/desc_firebase_lockup"
            />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="QuizIt App" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You are not logged in !"
            android:textColor="@color/colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="Veriication Sucessfull" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="#bdbdbd"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:layout_weight="1.0"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verification_code"
                    android:layout_weight="1.0"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"
                    android:background="@color/colorAccent"/>

                <Button
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/colorAccent"
                    android:text="@string/verify_phone_auth"/>

                <Button
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/colorAccent"
                    android:text="@string/resend_phone_auth"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="Sign Out" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
