<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionView"
    android:background="#08CEBD"
    >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:id="@+id/options">

        <RadioButton
            android:id="@+id/opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/opt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/noneText" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="90dp"
        android:background="#1CBB02"
        android:layout_marginStart="82dp"
        android:text="@string/submitText" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/submit"
        android:layout_marginEnd="65dp"
        android:background="#FD1B00"
        android:text="@string/skipText" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="34dp"
        android:text="TextView"
        android:textSize="24sp" />
</RelativeLayout>
